# cpp

./: .gitignore  README.md  readme.txt
.github/workflows/: deploy.yml
backend/: app.py  config.py  lambda_function.py  requirements.txt
backend/models/: __init__.py  author.py  conference.py  database.py  paper.py  review.py
backend/routes/: __init__.py  author_routes.py  aws_routes.py  conference_routes.py  paper_routes.py  review_routes.py
backend/services/: __init__.py  cloudfront_service.py  comprehend_service.py  dynamodb_service.py  lambda_service.py  s3_service.py  ses_service.py
backend/tests/: __init__.py  test_authors.py  test_conferences.py  test_papers.py  test_reviews.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  auth.jsx  main.jsx
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/pages/: Conferences.jsx  Dashboard.jsx  Login.jsx  PaperDetail.jsx  Papers.jsx  Register.jsx  SubmitPaper.jsx
paperflow/: MANIFEST.in  README.md  pyproject.toml  setup.py
paperflow/paperflow/: __init__.py  conference.py  paper.py  reviewer.py  scoring.py  submission.py
paperflow/tests/: __init__.py  test_conference.py  test_paper.py  test_reviewer.py  test_scoring.py  test_submission.py
report/: architecture.py  main.tex
srinidhi_cpp/: main.tex
